--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
+html {
+  background-image: url(/public/clouds.jpg);
+  background-position: center center; 
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,22 +13,23 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 .weatherSection {
-  width: 30%;
+  width: 20%;
   height: auto;
   top: 50%;
   left: 50%;
   position: absolute;
-  background-color: rgb(131, 165, 160);
-  padding: 30px;
+  border: 5px solid rgb(33, 89, 141);
   border-radius: 15px;
+  padding: 30px;
   transform: translate(-50%, -50%);
 }
 
 label {
-  
+  font-size: 1.4em;
 }
 
 input[type=text], select {
@@ -29,7 +38,7 @@ input[type=text], select {
   width: 100%;
   height: auto;
   border-radius: 5px;
-  border: 2px solid black;
+  border: 2px solid rgb(33, 89, 141);
   font-size: 1.1em;
   margin-bottom: 10px;
 }
@@ -42,15 +51,53 @@ h2 {
 button {
   width: 100%;
   height: auto;
-  margin-top: 25px;
   padding: 10px;
   border-radius: 15px;
-  border: none;
-  background-color: rgb(89, 129, 123);
-  font-size: 1.4em;
+  border: 3px solid rgb(33, 89, 141);
+  background-color: #4F9AE7;
+  color: white;
+  font-size: 1.2em;
   font-weight: 600;
 }
 
 button:hover {
   cursor: pointer;
+  background-color: rgb(33, 89, 141);
+}
+
+.weatherResults {
+  text-align: center;
+  font-size: 1.2em;
+  margin-top: 25px;
+  background-color: rgb(33, 89, 141);
+  border: none;
+  border-radius: 5px;
+  color: white;
+  padding: 15px;
+}
+
+#city {
+  font-size: 1.4em;
+}
+
+#temp {
+  font-size: 1.2em;
+}
+
+img {
+  width: 30%;
+  margin: -15px;
+}
+
+p {
+  margin: 0;
+}
+
+h3 {
+  background-color: rgb(33, 89, 141);
+  border: none;
+  border-radius: 5px;
+  color: white;
+  padding: 15px;
+  text-align: center;
 }
