--- a/index.css
+++ b/index.css
@@ -30,17 +30,22 @@ body {
 
 label {
   font-size: 1.4em;
+  color: white;
+  font-weight: 700;
 }
 
-input[type=text], select {
+input, select {
   padding-top: 10px;
   padding-bottom: 10px;
   width: 100%;
   height: auto;
   border-radius: 5px;
-  border: 2px solid rgb(33, 89, 141);
+  border: none;
   font-size: 1.1em;
   margin-bottom: 10px;
+  background-color: rgb(239, 239, 239);
+  font-size: 1.2em;
+  color: rgb(33, 89, 141);
 }
 
 h2 {
@@ -48,10 +53,16 @@ h2 {
   margin-top: 13px;
 }
 
+.btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 button {
-  width: 100%;
+  width: 40%;
   height: auto;
-  padding: 10px;
+  padding: 7px;
   border-radius: 15px;
   border: 3px solid rgb(33, 89, 141);
   background-color: #4F9AE7;
@@ -100,4 +111,6 @@ h3 {
   color: white;
   padding: 15px;
   text-align: center;
+  margin-top: 25px;
+  margin-bottom: 0;
 }
